ParserNode.g4
grammar ParserNode;
import LexerNodeV2;

inicio: raiz EOF;

raiz: OBJETO_ABRE renglon OBJETO_CIERRA;

renglon: contenido | contenido OBJETO_SEPARA renglon;

contenido:
	string
	| bool
	| ruta
	| version
	| url
	| arreglo
	| objeto;

string:
	CADENA_NAME ELEMENTO_SEPARA VC
	| CADENA_DESCRIPTION ELEMENTO_SEPARA VC;

bool: CADENA_PRIVATE ELEMENTO_SEPARA VAL_BOLEANO;

ruta: CADENA_MAIN ELEMENTO_SEPARA VAL_RUTA;

version: CADENA_VERSION ELEMENTO_SEPARA VAL_VERSION;

url:
	CADENA_HOMEPAGE ELEMENTO_SEPARA VAL_URL_SEGURA
	| CADENA_HOMEPAGE ELEMENTO_SEPARA VAL_URL_NO_SEGURA;

arreglo:
	CADENA_CPU ELEMENTO_SEPARA ARREGLO_ABRE vcr ARREGLO_CIERRA
	| CADENA_KEYWORDS ELEMENTO_SEPARA ARREGLO_ABRE vcr ARREGLO_CIERRA;

objeto:
	CADENA_ENGINES ELEMENTO_SEPARA OBJETO_ABRE engines OBJETO_CIERRA
	| CADENA_SCRIPTS ELEMENTO_SEPARA OBJETO_ABRE repository OBJETO_CIERRA
	| CADENA_DEPENDENCIES ELEMENTO_SEPARA OBJETO_ABRE dependencia OBJETO_CIERRA
	| CADENA_REPOSITORY ELEMENTO_SEPARA OBJETO_ABRE repository OBJETO_CIERRA
	| CADENA_BUGS ELEMENTO_SEPARA OBJETO_ABRE repository OBJETO_CIERRA
	| CADENA_AUTHOR ELEMENTO_SEPARA OBJETO_ABRE repository OBJETO_CIERRA;

vcr: elementos | elementos OBJETO_SEPARA vcr |;

cadena: CADENA_NPM | CADENA_YARN | CADENA_NODE;
dependencia:
	VCR ELEMENTO_SEPARA VAL_VERSION
	| VCR ELEMENTO_SEPARA VAL_VERSION OBJETO_SEPARA dependencia;
engines:
	cadena ELEMENTO_SEPARA VAL_VERSION
	| cadena ELEMENTO_SEPARA VAL_VERSION OBJETO_SEPARA engines;

repository:
	VCR ELEMENTO_SEPARA elementos
	| VCR ELEMENTO_SEPARA elementos OBJETO_SEPARA repository
	|;
elementos:
	VAL_RUTA
	| VC
	| VAL_URL_NO_SEGURA
	| VAL_URL_SEGURA
	| VCR
	| VAL_VERSION
	| VAL_NULL;
